Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriIntegerRetIntObj.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        integer two = 66
        Yoda<Integer, integer, Integer> yoda
        Integer ret = yoda:useForce(one, two)
        output "passed"
     end
end
